# Rhygine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  Rhygine.sln
Examples/TestingScene/: CMakeLists.txt
Examples/TestingScene/Include/Bindables/: TextureChanger.h
Examples/TestingScene/Include/Components/: AwakeRigidbodies.h  BulletShowcaser.h  ChangeSceneTest.h  CoroutineTestComponent.h  InfoDisplayer.h  ParallelPrint.h  ReactShowcaser.h  RinModelShower.h  RotateAround.h  SpriteBatchTester.h  TestLitPlateComponent.h  TestParallelAsUpdate.h  TestParallelMaker.h  TestPhysicsMover.h  UITester.h
Examples/TestingScene/Include/Factories/: TestBasicLit.h  TestCrystal.h  TestFloor.h  TestLight.h  TestLitPlate.h  TestModel.h  TestModelLoader.h  TestNeptuneLoader.h  TestPyramid.h  TestTexture.h
Examples/TestingScene/Include/Opt/: OptBasic.h  OptBatch.h  OptModel.h  OptNep.h
Examples/TestingScene/Include/Present/: PresentResources.h  PresentVNManager.h  VNCharacter.h  VNOpener.h  VNTextbox.h
Examples/TestingScene/Include/Scenes/: BulletTestScene.h  LightTestScene.h  MemoryLeakTestScene.h  NewFeatureTestScene.h  OptScene.h  PresentScene.h  TestScene.h
Examples/TestingScene/Source/: WinMain.cpp
Examples/TestingScene/Source/Bindables/: TextureChanger.cpp
Examples/TestingScene/Source/Components/: AwakeRigidbodies.cpp  BulletShowcaser.cpp  ChangeSceneTest.cpp  CoroutineTestComponent.cpp  InfoDisplayer.cpp  ParallelPrint.cpp  ReactShowcaser.cpp  RinModelShower.cpp  RotateAround.cpp  SpriteBatchTester.cpp  TestLitPlateComponent.cpp  TestParallelAsUpdate.cpp  TestParallelMaker.cpp  TestPhysicsMover.cpp  UITester.cpp
Examples/TestingScene/Source/Factories/: TestBasicLit.cpp  TestCrystal.cpp  TestFloor.cpp  TestLight.cpp  TestLitPlate.cpp  TestModel.cpp  TestModelLoader.cpp  TestNeptuneLoader.cpp  TestPyramid.cpp  TestTexture.cpp
Examples/TestingScene/Source/Opt/: OptBasic.cpp  OptBatch.cpp  OptModel.cpp  OptNep.cpp
Examples/TestingScene/Source/Present/: PresentResources.cpp  PresentVNManager.cpp  VNCharacter.cpp  VNOpener.cpp  VNTextbox.cpp
Examples/TestingScene/Source/Scenes/: BulletTestScene.cpp  LightTestScene.cpp  MemoryLeakTestScene.cpp  NewFeatureTestScene.cpp  OptScene.cpp  PresentScene.cpp  TestScene.cpp
Rhygine/Libs/: CMakeLists.txt
Rhygine/Source/: CMakeLists.txt
Rhygine/Source/Core/: EntryPoint.cpp  EntryPoint.h  MemoryAllocation.h
Rhygine/Source/DataTypes/Concurrency/: ILockable.h  Locks.cpp  Locks.h  Mutex.cpp  Mutex.h  Semaphore.h  SharedMutex.cpp  SharedMutex.h  Thread.cpp  Thread.h
Rhygine/Source/Debug/: Logger.cpp  Logger.h  StackTrace.cpp  StackTrace.h
Source/Framework/: CMakeLists.txt
Source/Framework/BulletPhysics/: CMakeLists.txt
Source/Framework/BulletPhysics/Include/: RhyBullet.h
Source/Framework/BulletPhysics/Include/Bullet/: BulletConverter.h  BulletDebugDraw.h  BulletPhysicsModule.h  Physics.h  RigidBody.h
Source/Framework/BulletPhysics/Shaders/: BulletDebugVert.hlsl
Source/Framework/BulletPhysics/Source/Bullet/: BulletDebugDraw.cpp  BulletPhysicsModule.cpp  Physics.cpp  RigidBody.cpp
Source/Framework/CommonComponents/: CMakeLists.txt
Source/Framework/CommonComponents/Include/CC/: DeleteWhenBelow.h  ShapeFactory.h  TestLightComponent.h
Source/Framework/CommonComponents/Shaders/: BasicPix.hlsl  PhongTexNormalMappingVert.hlsl  PhongTexPix.hlsl  PhongTexVert.hlsl  TexPix.hlsl
Source/Framework/CommonComponents/Source/CC/: DeleteWhenBelow.cpp  TestLightComponent.cpp
Source/Framework/Core/: CMakeLists.txt
Source/Framework/Core/Include/: RhyBindables.h  RhyCoroutine.h  RhyException.h  RhyMath.h  RhySTB.h
Source/Framework/Core/Include/2D/: MonoFont.h  OrthographicCamera.h  SpriteBatch.h  TextureGenerator.h  TextureRegion.h
Source/Framework/Core/Include/Core/: Gfx.h  Log.h  Scene.h  Time.h  Window.h
Source/Framework/Core/Include/ECS/: Component.h  Drawable.h  GameObject.h  GameObjectFactory.h  ParallelUpdatable.h  Stage.h
Source/Framework/Core/Include/Input/: Keys.h  Mouse.h
Source/Framework/Core/Include/Math/: Matrix3x3.hpp  Random.h  Rect.h  SpaceConverter.h
Source/Framework/Core/Include/Task/: TaskManager.h
Source/Framework/Core/Include/UI/: UIChildSizer.h  UIElement.h  UIOwnSizer.h
Source/Framework/Core/Shaders/: SpriteBatchVert.hlsl
Source/Framework/Core/Source/2D/: MonoFont.cpp  OrthographicCamera.cpp  SpriteBatch.cpp  TextureGenerator.cpp
Source/Framework/Core/Source/Core/: Gfx.cpp  Log.cpp  Scene.cpp  Time.cpp  Window.cpp
Source/Framework/Core/Source/ECS/: Component.cpp  GameObject.cpp  Stage.cpp
Source/Framework/Core/Source/Input/: Keys.cpp  Mouse.cpp
Source/Framework/Core/Source/Math/: Rect.cpp  SpaceConverter.cpp
Source/Framework/Core/Source/Task/: TaskManager.cpp  Worker.cpp  Worker.h
Source/Framework/Core/Source/UI/: UIChildSizer.cpp  UIElement.cpp  UIOwnSizer.cpp
Source/Framework/ImGui/: CMakeLists.txt
Source/Framework/ImGui/Include/: Rhyimgui.h
Source/Framework/ImGui/Include/imgui/: ImGuiModule.h
Source/Framework/ImGui/Source/: ImGuiModule.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_tables.cpp  imgui_widgets.cpp
Source/Framework/Model3D/: CMakeLists.txt
Source/Framework/Model3D/Include/: RhyAssimp.h
Source/Framework/Model3D/Include/Model3D/: Bone.h  Mesh.h  Model3DModule.h  ModelLoader.h
Source/Framework/Model3D/Source/Model3D/: Bone.cpp  Mesh.cpp  Model3DModule.cpp  ModelLoader.cpp  SkeletonMesh.cpp
Source/Framework/ReactPhysics/: CMakeLists.txt
Source/Framework/ReactPhysics/Include/React/: CollisionBody.h  Ray.h  RaycastInfo.h  ReactBodyBase.h  ReactConverter.h  ReactDebugRenderer.h  ReactLogger.h  ReactPhysicsModule.h  RigidBody.h
Source/Framework/ReactPhysics/Shaders/: ReactDebugPix.hlsl  ReactDebugVert.hlsl
Source/Framework/ReactPhysics/Source/React/: CollisionBody.cpp  ReactBodyBase.cpp  ReactDebugRenderer.cpp  ReactLogger.cpp  ReactPhysicsModule.cpp  RigidBody.cpp
Source/Framework/soloud/: CMakeLists.txt
Source/Framework/soloud/Include/Sound/: SoloudModule.h  (+2 more)
(+408 files in other folders)
